Fixed z-index issue where q-tips were floating above the google paces autocomplete dropdown.

--- a/inc/css/tnygmaps_modal.less
+++ b/inc/css/tnygmaps_modal.less
@@ -261,7 +261,7 @@ span[data-tooltip],
 	border-width: 1px;
 	border-style: solid;
 	color: rgb(167, 166, 166);
-	z-index: 999999;
+	z-index: 0;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none; // Safari -2.0
